[package]
name = "solana-bigtable-hbase-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "server"
path = "src/server.rs"

[dependencies]
tonic = "0.12.3"
prost = "0.13.3"
prost-types = "0.13.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.15"
backoff = { version = "0.4.0", features = ["tokio"] }
hbase-thrift = "1.2.0"
futures = "0.3.30"
thrift = "0.17.0"
thiserror = "1.0.61"
log = "0.4.21"
lazy_static = "1.4.0"
env_logger = "0.11.5"
deadpool = { version = "0.12.1", features = ["managed"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = "1.0.214"
serde_json = "=1.0.1"
zookeeper = "0.8.0"
